--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./main.js",
-    "goon" : "nodemon ./main.js"
+    "goon" : "nodemon ./app/main.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
